[package]
name = "hn"
version = "0.1.0"
authors = ["yayoc <n.yayoshi+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.3"
reqwest = "0.9.22"
serde = { version = "1.0", features = ["derive"] }
num_cpus = "1.10.1"
mockito = "0.21.0"
webbrowser = "0.5.2"
clap = "2.33.0"
tui = "0.6.2"

